--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,14 @@ dependencies {
     implementation'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    dependencies {
+        implementation ('io.socket:socket.io-client:2.0.0') {
+            exclude group: 'org.json', module: 'json'
+        }
+    }
+    
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
 }
